# Lab-Project-Espressif-Demos

./: .gitmodules  CMakeLists.txt  History.txt  README.md  getting_started_linux.md  getting_started_windows.md  manifest.yml
components/FreeRTOS-Wrapper/: CMakeLists.txt
components/FreeRTOS-Wrapper/include/: queue.h  semphr.h  task.h  timers.h
components/crypto/: CMakeLists.txt
components/logging/: CMakeLists.txt
components/logging/include/: logging_stack.h
components/logging/source/: logging.c
components/mqtt-agent-interface/: CMakeLists.txt
components/mqtt-agent-interface/include/: freertos_command_pool.h
components/mqtt-agent-interface/source/: freertos_command_pool.c
components/mqtt-subscription-manager/: CMakeLists.txt
components/network_transport/: CMakeLists.txt
components/network_transport/include/: tls_freertos.h
components/network_transport/source/: tls_freertos.c
components/ota_pal/: CMakeLists.txt
components/ota_pal/source/: ota_pal.c
components/pkcs11_helpers/: CMakeLists.txt
components/pkcs11_pal/: CMakeLists.txt
components/pkcs11_pal/source/: core_pkcs11_pal.c
demos/delta_ota/: CMakeLists.txt  partitions.csv  sdkconfig
demos/delta_ota/config/: aws_clientcredential.h  core_pkcs11_config.h  demo_config.h  threading_alt.h
demos/delta_ota/main/: CMakeLists.txt  main.c  ota_demo_core_mqtt.c
libs/AWS/ota/: CMakeLists.txt
libs/FreeRTOS/backoffAlgorithm/: CMakeLists.txt
libs/FreeRTOS/coreMQTT-Agent/: CMakeLists.txt
libs/FreeRTOS/corePKCS11/: CMakeLists.txt
source/demos/ota/: CMakeLists.txt
source/demos/ota/main/: CMakeLists.txt
source/demos/ota/main/demo-tasks/: demo_config.h
